on the page if the ID doesn't exist.  It did this by looking for the text

    id="foo"

where foo is the ID being searched for.  However, that would mean that
tags like

    <p id='foo'>
    <p id=foo>
    <p id = "foo">
    <p id=
        "foo">

would be seen as not existing.

This has been fixed by making scrape_text_by_id() search for the string
"foo" anywhere on the page.

1.45_03 Tue Jul 12 17:54:00 CDT 2016
------------------------------------
[ENHANCEMENTS]
Replaced header_matches() method with header_is() and header_like()
to match the other methods like title_is() and title_like().

The scraped_id_is() method used to assign a description for the test if
one was not passed.  Now it does not.

scraped_id_is() now gives proper diagnostics if an ID is not found in
the HTML.


1.45_02 Mon Jul 11 15:10:00 CDT 2016
------------------------------------
[ENHANCEMENTS]
Added a lacks_header() method to go with header_exists().


1.45_01 Sat Jul  9 00:03:42 CDT 2016
------------------------------------
[ENHANCEMENTS]
Added a delete_ok() method.  Thanks, moznion.

Added header_exists() and header_matches() methods.  Thanks, Eric
A. Zarko.

content_contains() now fails if it's called with a regex.  content_like()
now fails if it's not called with a regex.


[FIXES]
The test server run during the test suite allowed URLs outside of the
document tree, which could potentially be a security problem.  This has
been fixed.  Thanks, Tynovsky.
https://github.com/petdance/test-www-mechanize/issues/33


1.44    Sat Jun 30 20:32:04 CDT 2012
------------------------------------
There is no new functionality in this release.

[FIXES]
Fixed test failures on Win32.  Thanks, Jerry Gay.


1.42    Thu May 31 11:35:26 CDT 2012
------------------------------------
If you want to use the autolint functionality, you'll have to have
HTML::Lint 2.20.

[FIXES]
Custom lint objects don't get reset before they get used, making
autolint with a custom lint object practically useless.